src/index.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
  text-decoration: none;
  /* background-color: #0E2625; */
}

html,
body {
  width: 100%;
  height: 100vh;
  background-color: #0E2625;
  overflow-x: none;
}

::-webkit-scrollbar {
  width: .7rem;
}

::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background: #ffd28d;
  transition: all 0.5s ease-in-out;
}

::-webkit-scrollbar-thumb:hover {
  background: #0e2625;
}

::-webkit-scrollbar-track {
  background: #0e2625;
}



h1,
h2,
h3,
h4,
h5 {
  font-family: "Josefin Sans", sans-serif;
  font-size: 60px !important;
  font-weight: 400 !important;
}

h6 {
  font-size: 20px !important;
  color: white !important;
}


p {
  font-family: "Josefin Sans", sans-serif;
  font-size: 16px !important;
  font-weight: 400 !important;
}

.navbar {
  z-index: 50;
}


.heading-style {
  font-size: 32px;
  color: #d4af37;
  font-family: "Mrs Saint Delafield", cursive;
  font-weight: 400;
}

.banner-heading {
  font-size: 62px;
  color: #d4af37;
  letter-spacing: 10px;
  font-family: "Mrs Saint Delafield", cursive;
  font-weight: 400;
}

.custom-space {
  padding: 60px 180px;
  width: 100%;
}

.col-custom-space {
  padding-left: 70px !important;
}

.hero {
  position: relative;
  bottom: 97px;
  z-index: 10;
}

.hero-heading {
  font-size: 80px !important;
}

.herosubhead {
  font-size: 35px !important;
}

.highlight {
  color: #FFD28D;
}

/* custom navbar  */

.nav-link-custom {
  color: #fff !important;
  font-size: 1.05rem;
  font-family: "Josefin Sans", sans-serif;
  letter-spacing: 1px;
  padding: 8px 0 !important;
  transition: color 0.3s ease;
  font-weight: bolder;
}

.nav-link-custom:hover,
.nav-link-custom.active {
  color: #d4af37 !important;
}

/* custom navbar  */


/* cutom button global */

.custom-btn {
  background: transparent;
  border: 2px solid #FFD28D;
  color: #FFD28D;
  padding: 10px 22px;
  font-size: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
  cursor: pointer;
  transition: all 0.3s ease;
}

.custom-btn:hover {
  background: #FFD28D;
  color: #000;
}

.custom-btn:focus {
  outline: none;
}



.hero {
  position: relative;
  overflow: hidden;
}

.scroll-down {
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 20;
  /* Very important */
  pointer-events: all;
}

.scroll-down {
  font-size: 62px;
  color: #d4af37;
  animation: bounce 2.2s infinite ease-in-out;
  display: block;
}

@keyframes bounce {

  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }

  40% {
    transform: translateY(-15px);
  }

  60% {
    transform: translateY(-8px);
  }
}

.about-img {
  width: 100%;
  height: 850px;
  object-fit: cover;
}

.food-img {
  width: 100%;
  height: 800px;
  object-fit: cover;
}

.food2-img {
  width: 100%;
  max-width: 520px;
  height: 450px;
  object-fit: cover;
}

.food-cnt {
  padding-right: 120px !important;
  text-align: right;
  align-items: end;
}

.contact-img {
  width: 100%;
  object-fit: cover;
  height: 850px;
}

.input-group span .custom-icon {
  font-size: 20px !important;
  color: #d4af37;
}

form input {
  padding: 15px 30px;
  color: white;
  width: 100%;
  border: 1px solid #d4af37;
  background: transparent;
  border-radius: 0;
}

input::placeholder,
textarea::placeholder {
  color: white;
}

textarea {
  padding: 15px 30px;
  color: white;
  width: 100%;
  border: 1px solid #d4af37;
  background: transparent;
  border-radius: 0;
  color: white;
}

select {
  width: 100%;
  padding: 15px 30px;
  border: 1px solid #d4af37;
  color: white;
  background-color: transparent;
}

/* video section css */

.video-bg {
  background-image: url('./assets/images/Video.png');
  height: 80vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

}

.video-icon {
  display: inline-block;
  color: white;
  font-size: 6rem;
  cursor: pointer;
  animation: scaleUpDown 2s infinite ease-in-out;
}

@keyframes scaleUpDown {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.5);
  }

  100% {
    transform: scale(1);
  }
}

.food-section {
  background: linear-gradient(to bottom,
      hsla(178, 48%, 10%, 1) 0%,
      hsla(175, 46%, 5%, 1) 50%,
      hsla(0, 0%, 0%, 1) 100%);
}

/* video section css */

.foodslider-sec {
  background: linear-gradient(to bottom,
      hsla(0, 0%, 0%, 1) 0%,
      hsla(175, 46%, 5%, 1) 50%,
      hsla(178, 48%, 10%, 1) 100%);

  overflow: hidden;
}

.foodslider-sec {
  min-height: 700px;
  /* important */
}


.mySwiper {
  width: 100%;
}

.slider-img {
  width: 100%;
  height: 500px;
  object-fit: cover;
  border-radius: 10px;
}

.testimonial-section {
  background: linear-gradient(to bottom,
      hsla(178, 48%, 10%, 1) 0%,
      hsla(175, 46%, 5%, 1) 50%,
      hsla(0, 0%, 0%, 1) 100%);
  color: white;
}

.conatct-sec {
  background: linear-gradient(to bottom,
      hsla(0, 0%, 0%, 1) 0%,
      hsla(175, 46%, 5%, 1) 50%,
      hsla(178, 48%, 10%, 1) 100%);
  color: white;
}

.logo-slider-img {
  width: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.logoslider {
  padding: 90px !important;
  position: relative;
  overflow: hidden;
}

.logo-slider-wrapper {
  position: relative;
  padding: 20px 0;
}

.slider-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
  pointer-events: none;
}

.left-overlay,
.right-overlay {
  position: absolute;
  top: 0;
  width: 150px;
  height: 100%;
  z-index: 10;
  pointer-events: none;
}

.left-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 350px;
  height: 100%;
  z-index: 10;
  pointer-events: none;
  filter: blur(25px);
  background: linear-gradient(to right, rgb(14 38 37), rgb(14 38 37 / 81%));
}
/* ... */

